--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="components/pusher/dist/pusher.min.js"></script>
   </head>
 
   <body>
